fix icon spacing

--- a/services/frontend/src/components/cardVisibilityToggle/CardVisibilityToggle.scss
+++ b/services/frontend/src/components/cardVisibilityToggle/CardVisibilityToggle.scss
@@ -1,3 +1,7 @@
 .visibilitySelector {
   width: 140px !important;
 }
+
+.visibilityOptionIcon {
+  margin-right: 3px;
+}
